--- a/Final_Challenge.html
+++ b/Final_Challenge.html
@@ -7,5 +7,8 @@
     <script>
         document.write(checkPrime(51));
     </script>
+    <script>
+    timesTable(9);
+    </script>
 </body>
     </html>
