--- a/Final_Challenge.html
+++ b/Final_Challenge.html
@@ -8,7 +8,10 @@
         document.write(checkPrime(5));
     </script>
     <script>
-    timesTable(9);
+    timesTable(3);
+    </script>
+    <script>
+    primeTable(22);
     </script>
 </body>
     </html>
